--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,7 +19,8 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN python -m pip install --upgrade pip
+RUN pip install --no-cache-dir --default-timeout=120 --retries 10 -r requirements.txt
 
 COPY . .
 
