--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,19 @@
-# Build
 FROM node:20-alpine AS build
+
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
+
+ARG VITE_API_BASE=/api
+ENV VITE_API_BASE=$VITE_API_BASE
+
+COPY package*.json ./
+RUN npm ci
+
 COPY . .
 RUN npm run build
 
-# Serve
 FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
+
 EXPOSE 80
-CMD ["nginx","-g","daemon off;"]
+
